edit style.css file

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     /* bottom = footer height */
     padding: 0px;
    
-
+}
 header {
     color: yellow;
     /*border: 1px solid yellow; */
